--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Andrea Chiarelli",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csurf": "^1.11.0",
